modify api documentation
